...
    <string name="tab_title_badges">Badges</string>
    <string name="tab_title_help">Help</string>
    <string name="tab_title_login">Login</string>
    <string name="tab_title_points">Points</string>
    <string name="tab_title_privacy">Privacy</string>
    <string name="tab_title_register">Register</string>
    <string name="tab_title_reset">Reset Password</string>
    <string name="tab_title_scorecard">Scorecard</string>
    <string name="tab_title_activity">Activity</string>
    <string name="tab_title_welcome">Welcome</string>

    <string name="title_about">About</string>
    <string name="title_baseline">Baseline</string>
...
    <string name="error_register_no_email">Please enter your email address</string>
    <string name="error_register_password">Your password must be at least %1$d or more characters</string>
    <string name="error_register_password_no_match">Your passwords don\'t match</string>
    <string name="error_register_no_firstname">Please enter your first name</string>
    <string name="error_register_no_lastname">Please enter your last name</string>
    <string name="error_register_no_phoneno">Please enter your phone number</string>
    <string name="error_register_no_username">Please enter a username</string>
    <string name="error_register_username_spaces">Your username cannot contain spaces</string>
    <string name="error_register_email">Email not valid</string>
    <string name="error_resource_app_not_found">You don\'t seem to have an app installed to open \'%1$s\'. Please install an app capable of opening this type of file.</string>
    <string name="error_resource_not_found">File: \'%1$s\' not found.</string>
    <string name="error_preloading_accounts">Error preloading accounts from CSV file</string>
    <string name="error_reset">Username or email not found\nPlease try again</string>
    <string name="no_title_set">No title set</string>

    <string name="error_insufficient_storage_available">Insufficient storage available</string>
    <string name="error_sdcard">Your SD card is not available - please restart this app when the SD card is available.\nThe app will now close.</string>
    <string name="error_media_not_found">Media file: \'%1$s\' not found.</string>
    <string name="error_media_unsupported">\'%1$s\' does not appear to be a supported media file type.</string>
...
