package UI;

import android.os.SystemClock;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;

import org.digitalcampus.mobile.learning.R;
import org.digitalcampus.oppia.activity.WelcomeActivity;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import TestRules.DisableAnimationsRule;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;

@RunWith(AndroidJUnit4.class)
public class ResetUITest {

    @Rule
    public ActivityTestRule<WelcomeActivity> welcomeActivityTestRule =
            new ActivityTestRule<WelcomeActivity>(WelcomeActivity.class);

    @Rule
    public DisableAnimationsRule disableAnimationsRule = new DisableAnimationsRule();

    @Test
    public void clickResetButton_WrongUsername() throws  Exception {
        onView(withText(R.string.tab_title_reset))
                .perform(scrollTo(), click());

        onView(withId(R.id.reset_username_field))
                .perform(scrollTo(), typeText("WrongUsername")).perform(closeSoftKeyboard());;

        onView(withId(R.id.reset_btn))
                .perform(scrollTo(), click());

        onView(withText(R.string.error_reset))
                .check(matches(isDisplayed()));
    }

    @Test
    public void  showsErrorMessageWhenThereIsNoUsername() throws  Exception {
        onView(withText(R.string.tab_title_reset))
                .perform(scrollTo(), click());

        onView(withId(R.id.reset_username_field))
                .perform(scrollTo(), typeText("")).perform(closeSoftKeyboard());

        onView(withId(R.id.reset_btn))
                .perform(scrollTo(), click());

        onView(withText(R.string.error_register_no_username))
                .check(matches(isDisplayed()));
    }


}
